syntax = "proto3";

import "google/protobuf/wrappers.proto";

option java_package = "com.whylabs.logging.core.data";
option java_outer_classname = "Summaries";
option java_multiple_files = true;

message Counters {
  int64 count = 1;

  google.protobuf.Int64Value true_count = 2;
  google.protobuf.Int64Value null_count = 3;
}

message InferredType {
  enum Type {
    UNKNOWN = 0;
    NULL = 1;
    FRACTIONAL = 2;
    INTEGRAL = 3;
    BOOLEAN = 4;
    STRING = 5;
  }

  Type type = 1;
  double ratio = 2;
}

message UniqueCountSummary {
  double estimate = 1;
  double upper = 2;
  double lower = 3;
}

message FrequentStringsSummary {
  message FrequentItem {
    string item = 1;
    double estimate = 2;
  }
  repeated FrequentItem items = 1;
}

message StringsSummary {
  UniqueCountSummary unique_count = 1;
  FrequentStringsSummary frequent = 2;
}

message SchemaSummary {
  InferredType inferred_type = 1;
  map<string, int64> type_counts = 2;
}

message HistogramSummary {
  double start = 1;
  double end = 2;
  double width = 3;
  repeated int64 counts = 4;
}

message NumberSummary {
  uint64 count = 1;
  double min = 2;
  double max = 3;
  double mean = 4;
  double stddev = 5;

  HistogramSummary histogram = 6;
  UniqueCountSummary unique_count = 7;
}

message ColumnSummary {
  Counters counters = 1;
  SchemaSummary schema = 2;
  oneof data {
    NumberSummary number_summary = 3;
    StringsSummary string_summary = 4;
  }
}


message DatasetSummary {
  string name = 1;
  int64 timestamp = 2;
  map<string, ColumnSummary> columns = 3;
}

message DatasetSummaries {
  map<string, DatasetSummary> profiles = 1;
}